--- a/index.html
+++ b/index.html
@@ -109,8 +109,7 @@
                         <br><br> The N-PLAN was proposed by&nbsp;Rainbow Foundation in&nbsp;2008 by&nbsp;Malle Koppel,
                         later
                         replaced by&nbsp;me,
-                        John Rim, and the supervisory board, which consists of&nbsp;Sergei Popov, Bruno Suvi and Olga
-                        Popova.
+                        John Rim, and the supervisory board, which consists of&nbsp; Sergei Popov (chairman), Veronika Yudin, Bruno Suvi, Olga Popova and Michael Yudin.
                         N-PLAN
                         has committees in&nbsp;the vicinity
                         of&nbsp;Fort Bragg and Pope Army Air Field, Joint Base Charleston and Kingsley Field.
