--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                             to&nbsp;citizens,
                             to&nbsp;control
                             immigration, as&nbsp;the American
-                            people want. Not a&nbsp;wall like the Berlin Wall but a&nbsp;firm hand&nbsp;&mdash; with
+                            people want. Not a&nbsp;wall like the Berlin Wall, the French Maginot Line or "the Great Wall of China", but a&nbsp;firm hand&nbsp;&mdash; with
                             border
                             patrollers, police
                             officers, and military
